# setup

./: .ansible-lint  Brewfile  pyproject.toml  runme.sh  setup.yml
facts.d/: vscode-extensions.fact
files/etc/: paths
tasks/: fastforward.yml  macos.yml  pipx.yml  repos.yml  vscode.yml
