[tool.poetry]
name = "setup"
version = "0.1.0"
description = ""
authors = ["Brian Hartvigsen <brian.andrew@brianandjenny.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ansible-core = "^2.11.5"

[tool.poetry.dev-dependencies]
pyproject-flake8 = "^0.0.1-alpha.2"
flake8-sfs = "^0.0.3"
flake8-isort = "^4.0.0"
pep8-naming = "^0.12.1"
bandit = "^1.7.0"
black = "^21.9b0"
ansible-lint = {version = "^5.2.0", extras = ["yamllint"]}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
